# proyecto1_paralela

./: .gitignore  CMakeLists.txt  CMakePresets.json  Informe de Proyecto.docx  README.md  bench.ps1  bench_results.csv  vcpkg.json
src/: main.cpp
